src/objects/Account_Industry_trend__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts &amp; Industry Trends</relationshipLabel>
        <relationshipName>Accounts_Industry_Trends</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current_state__c</fullName>
        <label>Estado Actual</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Vendido en el pasado</fullName>
                </value>
                <value>
                    <fullName>No aplica</fullName>
                </value>
                <value>
                    <fullName>Lo poseo en el funnel</fullName>
                </value>
                <value>
                    <fullName>No lo poseo y no lo tengo en perspectiva</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Industry_Trend__c</fullName>
        <label>Industry Trend</label>
        <referenceTo>Industry_Trend__c</referenceTo>
        <relationshipLabel>Accounts &amp; Industry Trends</relationshipLabel>
        <relationshipName>Accounts_Industry_Trends</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Account - Industry trend</label>
    <nameField>
        <label>Nombre de Account - Industry trend</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Accounts &amp; Industry Trends</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>